--- a/manifest.json
+++ b/manifest.json
@@ -1,20 +1,19 @@
 {
-  "short_name": "UoM To-Do",
-  "name": "UoM To-Do List",
-  "icons": [
-    {
-      "src": "/assets/192.png",
-      "type": "image/png",
-      "sizes": "192x192"
-    },
-    {
-      "src": "/assets/512.png",
-      "type": "image/png",
-      "sizes": "512x512"
-    }
-  ],
-  "start_url": "/",
-  "background_color": "white",
-  "display": "standalone",
-  "description": "Example of a minimal to-do list"
+    "short_name": "UoM Tennis",
+    "name": "UoM MSC Tennis App",
+    "icons": [{
+            "src": "/assets/192.png",
+            "type": "image/png",
+            "sizes": "192x192"
+        },
+        {
+            "src": "/assets/512.png",
+            "type": "image/png",
+            "sizes": "512x512"
+        }
+    ],
+    "start_url": "/index.html",
+    "background_color": "white",
+    "display": "standalone",
+    "description": "MSC assignment for a web development course"
 }
