--- a/manifest.json
+++ b/manifest.json
@@ -12,7 +12,7 @@
             "sizes": "512x512"
         }
     ],
-    "start_url": "/index.html",
+    "start_url": "/",
     "background_color": "white",
     "display": "standalone",
     "description": "MSC assignment for a web development course"
